<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/wasiat"
            android:icon="@mipmap/home"
            android:title="@string/title_wasiat" />
        <item
            android:id="@+id/bookmark"
            android:icon="@mipmap/bookmark"
            android:title="@string/title_bookmark" />

        <item
            android:id="@+id/history"
            android:icon="@mipmap/refresh"
            android:title="@string/title_history" />

    </group>

    <item android:title="Bantuan dan Saran">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@mipmap/settings"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/about"
                android:icon="@mipmap/about"
                android:title="@string/title_about" />
            <item
                android:id="@+id/help"
                android:icon="@mipmap/help"
                android:title="@string/title_help" />
            <item
                android:id="@+id/rating"
                android:icon="@mipmap/rating"
                android:title="@string/title_rating" />
        </menu>
    </item>

</menu>
