<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/list_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_number"/>

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/title_judul" />

    <ImageView
        android:id="@+id/action_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:src="@drawable/more_down"
        android:contentDescription="@string/title_action" />

</LinearLayout>