<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/icon"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background_nav_bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/title_detail"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="end">

                <ImageView
                    android:id="@+id/action_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/btn_star_big_off"/>

                <ImageView
                    android:id="@+id/action_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@+id/action_favorite"
                    android:src="@android:drawable/ic_menu_share" />

                <ImageView
                    android:id="@+id/action_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/action_share"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"/>

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/size_text_judul"
                android:textStyle="bold"
                android:text="@string/title_judul"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/isi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:lineSpacingExtra="15dp"
                android:textSize="@dimen/size_text_isi"
                android:text="@string/title_isi"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>